--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'org.jetbrains.kotlin.jvm' version '1.4.30'
+	id 'org.jetbrains.kotlin.plugin.allopen' version '1.4.30'
+	id 'org.jetbrains.kotlin.plugin.spring' version '1.4.30'
 }
 
 group = 'de.RBrSoft'
